--- a/src/components/FeaturedMovie.css
+++ b/src/components/FeaturedMovie.css
@@ -11,7 +11,7 @@
 .featured--horizontal {
     width: inherit;
     height: inherit;
-    background: linear-gradient(to right , #111 30%, transparent 70%);
+    background: radial-gradient(circle at right , transparent, #111);
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -58,6 +58,7 @@
 .featured--watch,
 .featured--list {
     display: inline-block;
+    justify-content: space-between 40px;
     margin-top: 15px;
     font-size: 20px;
     font-weight: bold;
@@ -87,3 +88,51 @@
     font-size: 18px;
     color: #999;
 }
+
+@media (max-width:760px) {
+    .featured {
+        height: 90vh;
+        background-image: 10px;
+    }
+
+    .featured--name {
+        font-size: 40px;
+    }
+
+    .featured--info {
+        font-size: 16px;
+    }
+
+    .featured--description {
+        font-size: 14px;
+        max-width: 100%;
+        margin-right: 30px;
+    }
+
+    .featured--watch,
+    .featured--list {
+        font-size: 16px;
+    }
+
+    .featured--genre {
+        font-size: 13px;
+    }
+
+    .featured--vertical {
+        background: linear-gradient(to top , #111 50%, transparent 100%);
+    }
+    
+    .featured--horizontal {
+        background: none;
+    }
+}
+
+@media (max-width: 760px) {
+    .featured--watch,
+    .featured--list {
+    display: flex;
+    justify-content: space-between;
+    padding: 12px 25px;
+}
+}
+    
